<resources>
    <string name="app_name">NeighbourGood</string>

    <string name="title_classifieds">Classifieds</string>
    <string-array name="Category">
        <item>Lost and Found</item>
        <item>Borrowing</item>
        <item>Buying</item>
        <item>Selling</item>
        <item>Bartering</item>
        <item>Giveaway</item>
        <item>Recipe</item>
        <item>Seeking Help</item>
    </string-array>
    <string name="title_events">Events</string>
    <string name="title_complain">Complain</string>
    <string name="title_crime">Crime Report</string>
    <string name="title_map">Map</string>
    <string name="title_emergency">Emergency!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_create">Create</string>

    <string name="action_login">Login / Sign-up</string>
    <string name="action_neighbors">Neighbors</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_callForHelp">Call for Help!</string>

</resources>
