<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_create"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/action_create"
        app:showAsAction="always" />
    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_neighbors" android:title="@string/action_neighbors"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="300" app:showAsAction="never" />
    <item android:id="@+id/action_feedback" android:title="@string/action_feedback"
        android:orderInCategory="400" app:showAsAction="never" />
</menu>
